[package]
name = "chip8-rust"
version = "0.1.0"
authors = ["Kristopher <mrplymrph@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.4"
imgui = "0.11.0"
winit = "0.24.0"
image = "0.23.14"
imgui-winit-support = { version = "0.11.0", features = ["winit-vulkan"] }
