[package]
name = "chip8-rust"
version = "0.1.0"
authors = ["Kristopher <mrplymrph@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.4"
imgui = "0.11.0"
winit = "0.28.6"
image = "0.24.7"
imgui-winit-support = "0.11.0"
wgpu = "0.17.0"
futures = "0.3.28"
