[package]
name = "chip8-rust"
version = "0.1.0"
authors = ["Kristopher <mrplymrph@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.4"

[dependencies.sdl2]
git = "https://github.com/rust-sdl2/rust-sdl2"